2010-03-21  Thomas Moulard  <thomas.moulard@gmail.com>

	Clean I/O header.
	* include/roboptim/core/io.hh: Remove
	self-inclusion and commented inclusion.

2010-03-21  Thomas Moulard  <thomas.moulard@gmail.com>

	Update MSVC project.
	* msvc/roboptim-core/roboptim-core.vcproj:
	Add ``solver.cc'' to files list.
	Reported by François Keith.

2010-03-08  Thomas Moulard  <thomas.moulard@gmail.com>

	Synchronize.
	* build-aux: Synchronize.

2010-03-08  Thomas Moulard  <thomas.moulard@gmail.com>

	Synchronize.
	* build-aux: Synchronize.

2010-03-08  Thomas Moulard  <thomas.moulard@gmail.com>

	Synchronize.
	* build-aux: Synchronize.

2010-03-03  Thomas Moulard  <thomas.moulard@gmail.com>

	Add Split filter.
	* include/Makefile.am: Distribute new headers.
	* include/roboptim/core/filter/split.hh: New.
	* include/roboptim/core/filter/split.hxx: New.
	* tests/Makefile.am: Compile new test case.
	* tests/split.cc: New.
	* tests/split.stdout: New.
	* tests/testsuite.at: Add new test case.

2010-03-03  Thomas Moulard  <thomas.moulard@gmail.com>

	Clean filter.
	* include/roboptim/core/derivative-size.hh: New.
	* include/roboptim/core/filter/cached-function.hh,
	* include/roboptim/core/filter/cached-function.hxx:
	Uniformize header guards.
	* include/roboptim/core/fwd.hh: Pre-declare derivativeSize.
	* src/doc.hh: Define new group.

2010-03-03  Thomas Moulard  <thomas.moulard@gmail.com>

	Add root-level header to easy library use.
	* include/roboptim/core.hh: New.

2010-03-03  Thomas Moulard  <thomas.moulard@gmail.com>

	Distribute filters in a separate sub-directory.
	* include/Makefile.am: Fix path.
	* include/roboptim/core/filter/cached-function.hh:
	Rename from include/roboptim/core/cached-function.hh.
	* include/roboptim/core/filter/cached-function.hxx:
	Rename from include/roboptim/core/cached-function.hxx.
	* tests/cached-function.cc: Fix include.

2010-03-01  Thomas Moulard  <thomas.moulard@gmail.com>

	Use shared pointers in caching proxy.